--- a/cv.tex
+++ b/cv.tex
@@ -14,6 +14,11 @@
 \newif\ifprivate
 %\privatetrue
 
+\hypersetup{
+	pdftitle={Checkoway Curriculum Vitae},
+	pdfauthor={Stephen Checkoway},
+}
+
 \urlstyle{sf}
 \newenvironment{cvseclist}[1]
 	{\phantomsection
@@ -29,7 +34,7 @@
 
 \newcommand*\personalline[2]{%
 	\leavevmode
-	\hbox to12pc{#1\hfil}%
+	\hbox to14pc{#1\hfil}%
 	\hskip2pc\hbox{#2}%
 }
 
@@ -171,61 +176,6 @@
 	}
 \end{cvseclist}
 
-%\begin{cvseclist}{Invited Talks}
-%	\item[10/2011] \emph{Comprehensive security analyses of a
-%	modern automobile}.  Workshop on Embedded Systems Security
-%	(WESS'11) keynote.
-%\end{cvseclist}
-
-\begin{cvseclist}{Professional Activities}
-	\item[Editorial board] JETS 2013--present.
-	\item[\multilinelabel{Program committees}] USENIX Security
-	2014, 2015, 2016, 2017.
-	\item IEEE Security \& Privacy 2016, 2017
-	\item ACM CCS 2014, 2015.
-	\item WWW 2016, 2017.
-	\item PASSAT 2014.
-	\item ARES 2014.
-	\item USENIX WOOT 2011, 2013.
-	\item USENIX CSET 2013.
-	\item DIMVA 2012.
-	\item USENIX EVT/WOTE 2011, 2012.
-\end{cvseclist}
-
-\begin{cvseclist}{Teaching}
-	\item[Courses at UIC] Secure Computer Systems \\
-		Fall 2017
-		\url{https://www.cs.uic.edu/~s/teaching/cs487/2017-fall/}
-	\item Research Methods in Computer Science\\
-		Spring 2017
-		\url{https://www.cs.uic.edu/~s/teaching/cs590/2017-spring/}
-	\item Software Vulnerability Analysis\\
-		Fall 2016
-		\url{https://www.cs.uic.edu/~s/teaching/cs491/2016-fall/}
-	\item Advanced Computer Security\\
-		Spring 2016
-		\url{https://www.cs.uic.edu/~s/teaching/cs594/2016-spring/}
-	\item Languages and Automata\\
-		Fall 2015
-		\url{https://www.cs.uic.edu/~s/teaching/cs301/2015-fall/}
-
-	\item[Courses at JHU] Software Vulnerability Analysis\\
-		Fall 2012
-		\url{https://www.cs.uic.edu/~s/teaching/cs460/2012-fall/}\\
-		Fall 2013
-		\url{https://www.cs.uic.edu/~s/teaching/cs460/2013-fall/}\\
-		Fall 2014
-		\url{https://www.cs.uic.edu/~s/teaching/cs460/2014-fall/}
-	\item Advanced Topics in Software Security\\
-		Spring 2013
-		\url{https://www.cs.uic.edu/~s/teaching/cs668/2013-spring/}
-	\item Automata and Computation Theory\\
-		Spring 2014
-		\url{https://www.cs.uic.edu/~s/teaching/cs271/2014-spring/}\\
-		Spring 2015
-		\url{https://www.cs.uic.edu/~s/teaching/cs271/2015-spring/}
-\end{cvseclist}
-
 \begin{cvseclist}{Invited talks}
 	\item Fastly Security Speaker Series. ``A Systematic Analysis of the
 	Juniper Dual EC Incident.'' Oct.\ 2017.
@@ -250,6 +200,59 @@
 	\item Workshop on Embedded System Security keynote, joint talk
 	with Karl Koscher. ``Experimental Security Analysis of a
 	Modern Automobile.'' Oct.\ 2011.
+\end{cvseclist}
+
+
+\begin{cvseclist}{Professional Activities}
+	\item[Editorial board] JETS 2013--present.
+	\item[\multilinelabel{Program committees}]
+	      IEEE LangSec 2018
+	\item USENIX Security 2014, 2015, 2016, 2017
+	\item IEEE Security \& Privacy 2016, 2017
+	\item ACM CCS 2014, 2015
+	\item WWW 2016, 2017
+	\item PASSAT 2014
+	\item ARES 2014
+	\item USENIX WOOT 2011, 2013
+	\item USENIX CSET 2013
+	\item DIMVA 2012
+	\item USENIX EVT/WOTE 2011, 2012
+\end{cvseclist}
+
+\begin{cvseclist}{Teaching}
+	\item[Courses at UIC] Languages and Automata\\
+		Fall 2018
+		\url{https://www.cs.uic.edu/~s/teaching/cs301/2018-fall/}\\
+		Fall 2015
+		\url{https://www.cs.uic.edu/~s/teaching/cs301/2015-fall/}
+	\item Secure Computer Systems \\
+		Fall 2017
+		\url{https://www.cs.uic.edu/~s/teaching/cs487/2017-fall/}
+	\item Research Methods in Computer Science\\
+		Spring 2017
+		\url{https://www.cs.uic.edu/~s/teaching/cs590/2017-spring/}
+	\item Software Vulnerability Analysis\\
+		Fall 2016
+		\url{https://www.cs.uic.edu/~s/teaching/cs491/2016-fall/}
+	\item Advanced Computer Security\\
+		Spring 2016
+		\url{https://www.cs.uic.edu/~s/teaching/cs594/2016-spring/}
+
+	\item[Courses at JHU] Automata and Computation Theory\\
+		Spring 2015
+		\url{https://www.cs.uic.edu/~s/teaching/cs271/2015-spring/}\\
+		Spring 2014
+		\url{https://www.cs.uic.edu/~s/teaching/cs271/2014-spring/}
+	\item Software Vulnerability Analysis\\
+		Fall 2014
+		\url{https://www.cs.uic.edu/~s/teaching/cs460/2014-fall/}\\
+		Fall 2013
+		\url{https://www.cs.uic.edu/~s/teaching/cs460/2013-fall/}\\
+		Fall 2012
+		\url{https://www.cs.uic.edu/~s/teaching/cs460/2012-fall/}
+	\item Advanced Topics in Software Security\\
+		Spring 2013
+		\url{https://www.cs.uic.edu/~s/teaching/cs668/2013-spring/}
 \end{cvseclist}
 
 %\begin{cvseclist}{Invited Lectures}
