--- a/cv.tex
+++ b/cv.tex
@@ -221,8 +221,8 @@
 
 \begin{cvseclist}{Teaching}
 	\item[Courses at UIC] Languages and Automata\\
-		Fall 2018
-		\url{https://www.cs.uic.edu/~s/teaching/cs301/2018-fall/}\\
+		Spring 2018
+		\url{https://www.cs.uic.edu/~s/teaching/cs301/2018-spring/}\\
 		Fall 2015
 		\url{https://www.cs.uic.edu/~s/teaching/cs301/2015-fall/}
 	\item Secure Computer Systems \\
