--- a/checkoway.bib
+++ b/checkoway.bib
@@ -324,3 +324,15 @@
 		Science},
 	number = {13-01},
 }
+
+@inproceedings{martin-et-al:sentinel:iotdi18,
+	author = {Paul D. Martin and David Russel and Malek Ben Salem and
+	   Stephen Checkoway and Avi Rubin},
+	title = {Sentinel: Secure Mode Profiling and Enforcement for Embedded
+	  Systems},
+	booktitle = {\CONF{Internet of Things Design and
+	      Implementation}{IoTDI}{2018}},
+	editor = {Olaf Landsiedel and Klara Nahrstedt},
+	year = 2018,
+	month = apr,
+}
