--- a/cv.tex
+++ b/cv.tex
@@ -144,6 +144,7 @@
 	% exist, then TeX relaxes.
 	\InputIfFileExists{private.bib}\relax\relax
 	\pubs{Refereed papers}{
+		martin-et-al:sentinel:iotdi18,
 		checkoway-et-al:juniper-dual-ec:ccs16,
 		rushanan-checkoway:run-dma:woot15,
 		lundberg-et-al:mcis:ccs14,
