--- a/checkoway.bib
+++ b/checkoway.bib
@@ -15,7 +15,7 @@
 	title =		{Methods of Post-election Confidence-level Auditing},
 	year =		2008,
 	month =		sep,
-	note =		{Online: \url{https://www.cs.jhu.edu/~s/papers/re.html}},
+	note =		{Online: \url{https://checkoway.net/papers/re/}},
 }
 
 @PhDThesis{checkoway:dissertation:2012,
@@ -48,7 +48,7 @@
 	organization =	{USENIX/ACCURATE/IAVoSS},
 	year =		2009,
 	month =		aug,
-	url =		{https://www.cs.jhu.edu/~s/papers/evt2009.html},
+	url =		{https://checkoway.net/papers/evt2009/},
 }
 
 @InProceedings{checkoway-shacham:iago:asplos13,
@@ -60,7 +60,7 @@
 	publisher =	{ACM Press},
 	year =		2013,
 	month = 	mar,
-	url =		{https://www.cs.jhu.edu/~s/papers/iago2013.html},
+	url =		{https://checkoway.net/papers/iago2013/},
 }
 
 
@@ -72,7 +72,7 @@
 	organization =	{USENIX/ACCURATE/IAVoSS},
 	year =		2010,
 	month =		aug,
-	url =		{https://www.cs.jhu.edu/~s/papers/audits2010.html},
+	url =		{https://checkoway.net/papers/audits2010/},
 }
 
 @InProceedings{checkoway-et-al:cars-connectivity:usenix11,
@@ -103,7 +103,7 @@
 	year =		2010,
 	month =		oct,
 	pages =		{559-572},
-	url =		{https://www.cs.jhu.edu/~s/papers/noret-ccs2010.html},
+	url =		{https://checkoway.net/papers/noret-ccs2010/},
 }
 
 @TechReport{checkoway-shacham:noret:ucsd10,
@@ -114,7 +114,7 @@
 	number = 	{CS2010-0954},
 	year =		2010,
 	month =		feb,
-	url =		{http://www.cs.jhu.edu/~s/papers/noret2010.html},
+	url =		{https://checkoway.net/papers/noret2010/},
 }
 
 @Article{checkoway-shacham-rescorla:texhack:login2010,
@@ -126,7 +126,7 @@
 	volume =	35,
 	number =	4,
 	pages =		{17-22},
-	url =		{http://www.cs.jhu.edu/~s/papers/tex_login2010.html},
+	url =		{https://checkoway.net/papers/tex_login2010/},
 }
 
 @InProceedings{checkoway-shacham-rescorla:texhack:leet2010,
@@ -138,7 +138,7 @@
 	organization =	{USENIX},
 	editor =	{Michael Bailey},
 	booktitle =	{\CONF{USENIX Workshop on Large-Scale Exploits and Emergent Threats}{LEET}{2010}},
-	url =		{http://www.cs.jhu.edu/~s/papers/tex2010.html},
+	url =		{https://checkoway.net/papers/tex2010/},
 }
 
 @InProceedings{checkoway-et-al:juniper-dual-ec:ccs16,
@@ -152,7 +152,7 @@
         editor =        {Christopher Kruegel and Andrew Myers and Shai Halevi},
         year =          2016,
         month =         oct,
-  	url =           {https://www.cs.uic.edu/~s/papers/juniper2016},
+  	url =           {https://checkoway.net/papers/juniper2016},
 	note =		{\textbf{CCS 2016 Best Paper Award; Internet Society
 			 2017 Applied Networking Research Prize}},
 }
@@ -166,7 +166,7 @@
 	organization =	{USENIX},
 	editor =	{David Brumley and Michal Zalewski},
 	booktitle =	{\CONF{USENIX Workshop on Offensive Technologies}{WOOT}{2011}},
-	url =		{http://www.cs.jhu.edu/~s/papers/mturkppi2011.html},
+	url =		{https://checkoway.net/papers/mturkppi2011/},
 }
 
 @InProceedings{koscher-et-al:car:oakland10,
@@ -197,7 +197,7 @@
 	publisher =	{USENIX},
 	year =		2011,
 	month =		aug,
-	url =		{https://www.cs.jhu.edu/~s/papers/tolls2011.html},
+	url =		{https://checkoway.net/papers/tolls2011/},
 }
 
 @InProceedings{rushanan-checkoway:run-dma:woot15,
@@ -208,7 +208,7 @@
 	publisher =	{USENIX},
 	month =		aug,
 	year =		2015,
-	url =		{https://www.cs.uic.edu/~s/papers/rundma2015},
+	url =		{https://checkoway.net/papers/rundma2015},
 }
 
 @Article{sarwate-checkoway-shacham:nonplurality:spp13,
@@ -221,7 +221,7 @@
 	volume =	4,
 	number =	1,
 	pages =		{29-64},
-	url =		{https://www.cs.jhu.edu/~s/papers/nonplurality2013.html},
+	url =		{https://checkoway.net/papers/nonplurality2013/},
 }
 
 @Techreport{sarwate-checkoway-shacham:auditing-alternatives:ucsd11,
@@ -232,7 +232,7 @@
 	number =	{CS2011-0967},
 	year =		2011,
 	month =		jun,
-	url =		{https://www.cs.jhu.edu/~s/papers/nonplurality2011.html},
+	url =		{https://checkoway.net/papers/nonplurality2011/},
 }
 
 @inproceedings{zhang-et-al:trace-cache:iccd06,
@@ -246,7 +246,7 @@
 	pages =		{10-16},
 	doi =		{10.1109/ICCD.2006.4380787},
 	ISSN =		{1063-6404},
-	url =		{https://www.cs.jhu.edu/~s/papers/iccd2006.html},
+	url =		{https://checkoway.net/papers/iccd2006/},
 }
 
 @inproceedings{checkoway-et-al:dualec:usenix14,
@@ -336,3 +336,36 @@
 	year = 2018,
 	month = apr,
 }
+
+@InProceedings{ghasemisharif-et-al:ssoff:security18,
+        author =        {Mohammad Ghasemisharif and Amruta Ramesh and Stephen
+			 Checkoway and Chris Kanich and Jason Polakis},
+	title =         {O Single Sign-Off, Where Art Thou? {An} Empirical
+			 Analysis of Single Sign-On Account Hijacking and
+			 Session Management on the Web},
+	booktitle =	{\CONF{USENIX Security Symposium}{USENIX}{2018}},
+        editor =        {William Enck and Adrienne Porter Felt},
+	publisher =	{USENIX},
+        year =          2018,
+        month =         aug,
+	url =           {https://checkoway.net/papers/ssoff2018/},
+}
+
+@Article{checkoway-et-al:juniper-dual-ec:cacm,
+	author =	{Stephen Checkoway and Jacob Maskiewicz and Christina
+			 Garman and Joshua Fried and Shaanan Cohney and
+			 Matthew Green and Nadia Heninger and Ralf-Philipp
+			 Weinmann and Eric Rescorla and Hovav Shacham},
+	title =		{Where Did {I} Leave My Keys? {Lessons} from the
+	   		 {Juniper} {Dual~EC} Incident},
+	journal =	{Communications of the ACM},
+	volume =	61,
+	number =	11,
+	month =		oct,
+	year =		2018,
+	issn =		{0001-0782},
+	pages =		{148-155},
+	url =		{http://doi.acm.org/10.1145/3266291},
+	publisher =	{ACM},
+}
+
