--- a/cv.tex
+++ b/cv.tex
@@ -76,12 +76,14 @@
 	\par
 }
 
+\newcommand*\email[1]{\href{mailto:#1}{\sffamily#1}}
+
 \begin{document}
 \begin{cv}{Stephen Checkoway\hfill Curriculum Vit\ae}
 \begin{cvseclist}{Personal}
 	\item
-	\personalline{}{Tel.: +1.425.238.2326}\\
-	\personalline{}{Email: \href{mailto:s@pahtak.org}{\sffamily s@pahtak.org}}\\
+	%\personalline{}{Tel.: +1.425.238.2326}\\
+	\personalline{}{Email: \email{stephen.checkoway@oberlin.edu}}\\
 	\personalline{}{Web: \url{https://checkoway.net}}
 \end{cvseclist}
 
@@ -98,6 +100,7 @@
 \fi
 
 \begin{cvseclist}{Appointments}
+	\item[11/2018--current] Research Specialist, Oberlin College
 	\item[7/2018--current] Affiliate Scholar, Oberlin College
 	\item[8/2015--7/2018] Assistant Professor, University of
 	Illinois at Chicago
@@ -188,10 +191,14 @@
 \end{cvseclist}
 
 \begin{cvseclist}{Invited talks}
+	\item Oberlin College. ``Electronic Voting Security.'' Oct.\ 2018.
+
 	\item Fastly Security Speaker Series. ``A Systematic Analysis of the
 	Juniper Dual EC Incident.'' Oct.\ 2017.
+
 	\item IRTF Applied Networking Research Prize talk at IETF 99. ``A
 	Systematic Analysis of the Juniper Dual EC Incident. Jul.\ 2017.
+
 	\item Code Freeze 2015: Security keynote.
 	``Embedded Systems Security: The Need for a Holistic
 	Approach.'' Jan.\ 2015.
@@ -217,11 +224,11 @@
 \begin{cvseclist}{Professional Activities}
 	\item[Editorial board] JETS 2013--present.
 	\item[\multilinelabel{Program committees}]
-	      IEEE LangSec 2018
-	\item USENIX Security 2014, 2015, 2016, 2017
+	      USENIX Security 2014, 2015, 2016, 2017, 2019
+	\item IEEE LangSec 2018
 	\item IEEE Security \& Privacy 2016, 2017
-	\item ACM CCS 2014, 2015
 	\item WWW 2016, 2017
+	\item ACM CCS 2014, 2015
 	\item PASSAT 2014
 	\item ARES 2014
 	\item USENIX WOOT 2011, 2013
