--- a/checkoway.bib
+++ b/checkoway.bib
@@ -369,3 +369,15 @@
 	publisher =	{ACM},
 }
 
+@InProceedings{crow-et-al:triton-testbed:cset19,
+	author =	{Sam Crow and Brown Farinholt and Brian Johannesmeyer
+	   		 and Karl Koscher and Stephen Checkoway and
+			 Stefan Savage and Aaron Schulman and Alex Snoeren and
+			 Kirill Levchenko},
+	title =		{Triton: A Software-Reconfigurable Federated Avionics Testbed},
+	booktitle =	{\CONF{USENIX Workshop on Cyber Security Experimentation and Test}{CSET}{2019}},
+	year =		2019,
+	month =		aug,
+	organization =	{USENIX},
+	url =		{https://checkoway.net/papers/triton-testbed2019/},
+}
