Add paper and missing PCs

--- a/cv.tex
+++ b/cv.tex
@@ -157,6 +157,7 @@
 	% exist, then TeX relaxes.
 	\InputIfFileExists{private.bib}\relax\relax
 	\pubs{Refereed papers}{
+		sun-et-al:kollector:tmc,
 		crow-et-al:triton-testbed:cset19,
 		ghasemisharif-et-al:ssoff:security18,
 		martin-et-al:sentinel:iotdi18,
@@ -231,8 +232,10 @@
 	\item IEEE Security \& Privacy 2016, 2017, 2020
 	\item USENIX CSET 2013, 2019
 	\item IEEE LangSec 2018
+	\item ROOTS 2017
 	\item WWW 2016, 2017
 	\item ACM CCS 2014, 2015
+	\item CANS 2015
 	\item PASSAT 2014
 	\item ARES 2014
 	\item USENIX WOOT 2011, 2013
