--- a/checkoway.bib
+++ b/checkoway.bib
@@ -381,3 +381,14 @@
 	organization =	{USENIX},
 	url =		{https://checkoway.net/papers/triton-testbed2019/},
 }
+
+@Article{sun-et-al:kollector:tmc,
+	author =	{Lichao Sun and Bokai Cao and Ji Want and Witawas
+	   		 Srisa-an and Philip S. Yu and Alex D. Leow and
+			 Stephen Checkoway},
+	title =		{\textsc{Kollector}: Detecting Fraudulentt Activities
+	   		 on Mobile Devices Using Deep Learning},
+	journal =	{\JOURNAL{IEEE Transactions on Mobile Computing}{TMC}},
+	year = 2020,
+	note =		{To appear},
+}
