--- a/checkoway.bib
+++ b/checkoway.bib
@@ -386,7 +386,7 @@
 	author =	{Lichao Sun and Bokai Cao and Ji Want and Witawas
 	   		 Srisa-an and Philip S. Yu and Alex D. Leow and
 			 Stephen Checkoway},
-	title =		{\textsc{Kollector}: Detecting Fraudulentt Activities
+	title =		{\textsc{Kollector}: Detecting Fraudulent Activities
 	   		 on Mobile Devices Using Deep Learning},
 	journal =	{\JOURNAL{IEEE Transactions on Mobile Computing}{TMC}},
 	year = 2020,
