--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,6 @@
 \usepackage{trace}
 \usepackage{xcolor}
 
-%\definecolor{uicdarkblue}{RGB}{0,30,98}
 \definecolor{oberlinred}{RGB}{207,16,47}
 \definecolor{oberlingold}{RGB}{255,184,29}
 \renewcommand*\cvheadingfont{\Large\bfseries\color{oberlinred}}
@@ -245,41 +244,43 @@
 
 \begin{cvseclist}{Teaching}
 	\item[At Oberlin] Systems Programming \\
-		Spring 2020\\
+		Spring 2020
+		\url{https://checkoway.net/teaching/cs241/2020-spring/} \\
 		Fall 2019
+		\url{https://checkoway.net/teaching/cs241/2019-fall/}
 	\item[At UIC] Languages and Automata\\
 		Spring 2018
-		\url{https://www.cs.uic.edu/~s/teaching/cs301/2018-spring/}\\
+		\url{https://checkoway.net/teaching/cs301/2018-spring/}\\
 		Fall 2015
-		\url{https://www.cs.uic.edu/~s/teaching/cs301/2015-fall/}
+		\url{https://checkoway.net/teaching/cs301/2015-fall/}
 	\item Secure Computer Systems \\
 		Fall 2017
-		\url{https://www.cs.uic.edu/~s/teaching/cs487/2017-fall/}
+		\url{https://checkoway.net/teaching/cs487/2017-fall/}
 	\item Research Methods in Computer Science\\
 		Spring 2017
-		\url{https://www.cs.uic.edu/~s/teaching/cs590/2017-spring/}
+		\url{https://checkoway.net/teaching/cs590/2017-spring/}
 	\item Software Vulnerability Analysis\\
 		Fall 2016
-		\url{https://www.cs.uic.edu/~s/teaching/cs491/2016-fall/}
+		\url{https://checkoway.net/teaching/cs491/2016-fall/}
 	\item Advanced Computer Security\\
 		Spring 2016
-		\url{https://www.cs.uic.edu/~s/teaching/cs594/2016-spring/}
+		\url{https://checkoway.net/teaching/cs594/2016-spring/}
 
 	\item[At JHU] Automata and Computation Theory\\
 		Spring 2015
-		\url{https://www.cs.uic.edu/~s/teaching/cs271/2015-spring/}\\
+		\url{https://checkoway.net/teaching/cs271/2015-spring/}\\
 		Spring 2014
-		\url{https://www.cs.uic.edu/~s/teaching/cs271/2014-spring/}
+		\url{https://checkoway.net/teaching/cs271/2014-spring/}
 	\item Software Vulnerability Analysis\\
 		Fall 2014
-		\url{https://www.cs.uic.edu/~s/teaching/cs460/2014-fall/}\\
+		\url{https://checkoway.net/teaching/cs460/2014-fall/}\\
 		Fall 2013
-		\url{https://www.cs.uic.edu/~s/teaching/cs460/2013-fall/}\\
+		\url{https://checkoway.net/teaching/cs460/2013-fall/}\\
 		Fall 2012
-		\url{https://www.cs.uic.edu/~s/teaching/cs460/2012-fall/}
+		\url{https://checkoway.net/teaching/cs460/2012-fall/}
 	\item Advanced Topics in Software Security\\
 		Spring 2013
-		\url{https://www.cs.uic.edu/~s/teaching/cs668/2013-spring/}
+		\url{https://checkoway.net/teaching/cs668/2013-spring/}
 \end{cvseclist}
 
 %\begin{cvseclist}{Invited Lectures}
