--- a/cv.tex
+++ b/cv.tex
@@ -230,8 +230,9 @@
 	      USENIX Security 2014, 2015, 2016, 2017, 2019, 2020
 	\item IEEE Security \& Privacy 2016, 2017, 2020
 	\item USENIX CSET 2013, 2019, 2020
+	\item AutoSec 2019
 	\item IEEE LangSec 2018
-	\item ROOTS 2017
+	\item ROOTS 2017, 2018
 	\item WWW 2016, 2017
 	\item ACM CCS 2014, 2015
 	\item CANS 2015
