--- a/checkoway.bib
+++ b/checkoway.bib
@@ -177,13 +177,14 @@
 			 Shacham and Stefan Savage},
 	title =		{Experimental Security Analysis of a Modern
 			 Automobile},
-	booktitle =	{\CONF{IEEE Symposium on Security and Privacy}{Oakland}{2010}},
+	booktitle =	{\CONF{IEEE Symposium on Security and Privacy}{S\&P}{2010}},
 	year =		2010,
 	editor =	{David Evans and Giovanni Vigna},
 	month =		may,
 	organization =	{IEEE Computer Society},
 	pages =		{447-462},
 	url =		{http://www.autosec.org},
+	note =		{\textbf{S\&P 2020 Test of Time Award}}
 }
 
 @inproceedings{meiklejohn-et-al:tolling:usenix11,
