--- a/checkoway.bib
+++ b/checkoway.bib
@@ -203,7 +203,7 @@
 
 @InProceedings{rushanan-checkoway:run-dma:woot15,
 	author =	{Michael Rushanan and Stephen Checkoway},
-	title =		{Run-DMA},
+	title =		{Run-{DMA}},
 	booktitle =	{\CONF{USENIX Workshop on Offensive Technologies}{WOOT}{2015}},
 	editor =	{Francillon Aur{\'e}lien and Thomas Ptacek},
 	publisher =	{USENIX},
@@ -383,6 +383,21 @@
 	url =		{https://checkoway.net/papers/triton-testbed2019/},
 }
 
+@InProceedings{johnson-et-al:jetset:usenix21,
+	author =	{Evan Johnson and Maxwell Bland and YiFei Zhou and
+			 Joshua Mason and Stephen Checkoway and Stefan Savage
+			 and Kirill Levchenko},
+	title =		{Jetset: Targeted Firmware Rehosting for Embedded
+	   		 Systems},
+	booktitle =	{\CONF{USENIX Security Symposium}{USENIX}{2021}},
+	editor =	{Michael Bailey and Rachel Greenstadt},
+	year =		2021,
+	month =		aug,
+	organization =	{USENIX},
+	url =		{https://checkoway.net/papers/jetset2021/},
+	note =		{To appear},
+}
+
 @Article{sun-et-al:kollector:tmc,
 	author =	{Lichao Sun and Bokai Cao and Ji Want and Witawas
 	   		 Srisa-an and Philip S. Yu and Alex D. Leow and
@@ -391,5 +406,4 @@
 	   		 on Mobile Devices Using Deep Learning},
 	journal =	{\JOURNAL{IEEE Transactions on Mobile Computing}{TMC}},
 	year = 2020,
-	note =		{To appear},
 }
