--- a/cv.tex
+++ b/cv.tex
@@ -156,6 +156,7 @@
 	% exist, then TeX relaxes.
 	\InputIfFileExists{private.bib}\relax\relax
 	\pubs{Refereed papers}{
+		johnson-et-al:jetset:usenix21,
 		sun-et-al:kollector:tmc,
 		crow-et-al:triton-testbed:cset19,
 		ghasemisharif-et-al:ssoff:security18,
@@ -230,7 +231,7 @@
 	      USENIX Security 2014, 2015, 2016, 2017, 2019, 2020
 	\item IEEE Security \& Privacy 2016, 2017, 2020
 	\item USENIX CSET 2013, 2019, 2020
-	\item AutoSec 2019
+	\item AutoSec 2019, 2021
 	\item IEEE LangSec 2018
 	\item ROOTS 2017, 2018
 	\item WWW 2016, 2017
