--- a/cv.tex
+++ b/cv.tex
@@ -119,7 +119,7 @@
 \end{cvseclist}
 
 \begin{cvseclist}{Grants and gifts}
-	\item[10/2016--9/2019] National Science Foundation.
+	\item[10/2016--9/2021] National Science Foundation.
 	\textit{CPS: Synergy: Collaborative Research: Foundations of Security
 	Cyber-Physical Systems of Systems.}
 	PI.
@@ -245,7 +245,15 @@
 \end{cvseclist}
 
 \begin{cvseclist}{Teaching}
-	\item[At Oberlin] Systems Programming \\
+	\item[At Oberlin] Computer Organization \\
+		Spring 2021 (co-taught)
+	\item Programming Abstractions \\
+		Fall 2020
+		\url{https://checkoway.net/teaching/cs275/2020-fall/}
+	\item Computer and Information Security \\
+		Fall 2020
+		\url{https://checkoway.net/teaching/cs343/2020-fall/}
+	\item Systems Programming \\
 		Spring 2020
 		\url{https://checkoway.net/teaching/cs241/2020-spring/} \\
 		Fall 2019
