Indent classes, add summer

--- a/cv.tex
+++ b/cv.tex
@@ -244,52 +244,59 @@
 	\item USENIX EVT/WOTE 2011, 2012
 \end{cvseclist}
 
+\newcommand\class{%
+	\\
+	\null
+	\qquad
+}
 \begin{cvseclist}{Teaching}
-	\item[At Oberlin] Computer Organization \\
-		Spring 2021 (co-taught)
-	\item Programming Abstractions \\
-		Fall 2020
+	\item[At Oberlin] Programming Abstractions
+		\class Summer 2021
+		\url{https://checkoway.net/teaching/cs275/2021-summer/}
+		\class Fall 2020
 		\url{https://checkoway.net/teaching/cs275/2020-fall/}
-	\item Computer and Information Security \\
-		Fall 2020
+	\item Computer Organization
+		\class Spring 2021 (co-taught)
+	\item Computer and Information Security
+		\class Fall 2020
 		\url{https://checkoway.net/teaching/cs343/2020-fall/}
-	\item Systems Programming \\
-		Spring 2020
-		\url{https://checkoway.net/teaching/cs241/2020-spring/} \\
-		Fall 2019
+	\item Systems Programming
+		\class Spring 2020
+		\url{https://checkoway.net/teaching/cs241/2020-spring/}
+		\class Fall 2019
 		\url{https://checkoway.net/teaching/cs241/2019-fall/}
-	\item[At UIC] Languages and Automata\\
-		Spring 2018
-		\url{https://checkoway.net/teaching/cs301/2018-spring/}\\
-		Fall 2015
+	\item[At UIC] Languages and Automata
+		\class Spring 2018
+		\url{https://checkoway.net/teaching/cs301/2018-spring/}
+		\class Fall 2015
 		\url{https://checkoway.net/teaching/cs301/2015-fall/}
-	\item Secure Computer Systems \\
-		Fall 2017
+	\item Secure Computer Systems
+		\class Fall 2017
 		\url{https://checkoway.net/teaching/cs487/2017-fall/}
-	\item Research Methods in Computer Science\\
-		Spring 2017
+	\item Research Methods in Computer Science
+		\class Spring 2017
 		\url{https://checkoway.net/teaching/cs590/2017-spring/}
-	\item Software Vulnerability Analysis\\
-		Fall 2016
+	\item Software Vulnerability Analysis
+		\class Fall 2016
 		\url{https://checkoway.net/teaching/cs491/2016-fall/}
-	\item Advanced Computer Security\\
-		Spring 2016
+	\item Advanced Computer Security
+		\class Spring 2016
 		\url{https://checkoway.net/teaching/cs594/2016-spring/}
 
-	\item[At JHU] Automata and Computation Theory\\
-		Spring 2015
-		\url{https://checkoway.net/teaching/cs271/2015-spring/}\\
-		Spring 2014
+	\item[At JHU] Automata and Computation Theory
+		\class Spring 2015
+		\url{https://checkoway.net/teaching/cs271/2015-spring/}
+		\class Spring 2014
 		\url{https://checkoway.net/teaching/cs271/2014-spring/}
-	\item Software Vulnerability Analysis\\
-		Fall 2014
-		\url{https://checkoway.net/teaching/cs460/2014-fall/}\\
-		Fall 2013
-		\url{https://checkoway.net/teaching/cs460/2013-fall/}\\
-		Fall 2012
+	\item Software Vulnerability Analysis
+		\class Fall 2014
+		\url{https://checkoway.net/teaching/cs460/2014-fall/}
+		\class Fall 2013
+		\url{https://checkoway.net/teaching/cs460/2013-fall/}
+		\class Fall 2012
 		\url{https://checkoway.net/teaching/cs460/2012-fall/}
-	\item Advanced Topics in Software Security\\
-		Spring 2013
+	\item Advanced Topics in Software Security
+		\class Spring 2013
 		\url{https://checkoway.net/teaching/cs668/2013-spring/}
 \end{cvseclist}
 
