--- a/cv.tex
+++ b/cv.tex
@@ -194,6 +194,18 @@
 	}
 \end{cvseclist}
 
+\begin{cvseclist}{Awards}
+	\item 2021 Golden Goose Award for automotive security research.
+	\item 2020 IEEE Symposium on Security and Privacy Test of Time Award
+	for Koscher et al.\ ``Experimental security analysis of a modern
+	automobile.''
+	\item 2017 Internet Society Applied Networking for Checkoway et al.\
+	``A systematic analysis of the Juniper Dual EC incident.''
+	\item 2016 ACM Computer and Communication Security Best Paper Award
+	for Checkoway et al.\ ``A systematic analysis of the Juniper Dual EC
+	incident.''
+\end{cvseclist}
+
 \begin{cvseclist}{Invited talks}
 	\item Oberlin College. ``Electronic Voting Security.'' Oct.\ 2018.
 
