--- a/checkoway.bib
+++ b/checkoway.bib
@@ -406,3 +406,16 @@
 	journal =	{\JOURNAL{IEEE Transactions on Mobile Computing}{TMC}},
 	year = 2020,
 }
+
+@InProceedings{vasquez-et-al:h26forge,
+	author =	{Willy R. Vasquez and Stephen Checkoway and Hovav
+			 Shacham},
+	title =		{The Most Dangerous Codec in the World: Finding and
+			 Exploiting Vulnerabilities in H.264 Decoders},
+	booktitle =	{\CONF{USENIX Security Symposium}{USENIX}{2023}},
+	editor =	{Joe Calandrino and Carmela Troncoso},
+	year =		2023,
+	month =		aug,
+	organization =	{USENIX},
+	note =		{To appear},
+}
