--- a/cv.tex
+++ b/cv.tex
@@ -100,7 +100,9 @@
 \fi
 
 \begin{cvseclist}{Appointments}
-	\item[7/2019--current] Assistant Professor, Oberlin College
+	\item[7/2023--current] Kenneth Jacobs '71 Associate Professor of
+	Computer Science, Oberlin College
+	\item[7/2019--6/2023] Assistant Professor, Oberlin College
 	\item[11/2018--6/2019] Research Specialist, Oberlin College
 	\item[7/2018--6/2019] Affiliate Scholar, Oberlin College
 	\item[8/2015--7/2018] Assistant Professor, University of
@@ -156,6 +158,7 @@
 	% exist, then TeX relaxes.
 	\InputIfFileExists{private.bib}\relax\relax
 	\pubs{Refereed papers}{
+		vasquez-et-al:h26forge,
 		johnson-et-al:jetset:usenix21,
 		sun-et-al:kollector:tmc,
 		crow-et-al:triton-testbed:cset19,
