--- a/cv.tex
+++ b/cv.tex
@@ -265,21 +265,39 @@
 	\qquad
 }
 \begin{cvseclist}{Teaching}
-	\item[At Oberlin] Programming Abstractions
+	\item[At Oberlin] Theory of Computation
+		\class Spring 2024
+		\url{https://checkoway.net/teaching/cs383/2024-spring/}
+		\class Fall 2023
+		\url{https://checkoway.net/teaching/cs383/2023-fall/}
+	\item Programming Abstractions
+		\class Spring 2022
+		\url{https://checkoway.net/teaching/cs275/2022-spring/}
+		\class Fall 2021
+		\url{https://checkoway.net/teaching/cs275/2021-fall/}
 		\class Summer 2021
 		\url{https://checkoway.net/teaching/cs275/2021-summer/}
 		\class Fall 2020
 		\url{https://checkoway.net/teaching/cs275/2020-fall/}
-	\item Computer Organization
+	\item Introduction to Computer Architecture
+		\class Spring 2022
+		\url{https://checkoway.net/teaching/cs210/2022-spring/}
+		\class Fall 2021
+		\url{https://checkoway.net/teaching/cs210/2021-fall/}
 		\class Spring 2021 (co-taught)
 	\item Computer and Information Security
 		\class Fall 2020
 		\url{https://checkoway.net/teaching/cs343/2020-fall/}
 	\item Systems Programming
+		\class Spring 2024
+		\url{https://checkoway.net/teaching/cs241/2024-spring/}
+		\class Fall 2023
+		\url{https://checkoway.net/teaching/cs241/2023-fall/}
 		\class Spring 2020
 		\url{https://checkoway.net/teaching/cs241/2020-spring/}
 		\class Fall 2019
 		\url{https://checkoway.net/teaching/cs241/2019-fall/}
+
 	\item[At UIC] Languages and Automata
 		\class Spring 2018
 		\url{https://checkoway.net/teaching/cs301/2018-spring/}
